# DA_proj2

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  results.txt
algorithms/: Algorithms.cpp  Algorithms.h
benchmarks/: approximation_accuracy.txt  bmarks.csv  tograph.py
data/: Pallets_01.csv
data_structures/: DataStruct.cpp  DataStruct.h  Item.cpp  Item.h
menu/: Menu.cpp  Menu.h  tc.h
ortools/lib/cmake/absl/: abslTargets.cmake
ortools/lib/pkgconfig/: absl_absl_check.pc  absl_algorithm_container.pc  absl_any.pc  absl_bad_optional_access.pc  absl_base_internal.pc  absl_bits.pc  absl_btree.pc  absl_city.pc  absl_common_policy_traits.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_handle.pc  absl_core_headers.pc  absl_crc_cord_state.pc  absl_demangle_rust.pc  absl_endian.pc  absl_examine_stack.pc  absl_failure_signal_handler.pc  absl_fixed_array.pc  absl_flags_config.pc  absl_flags_usage.pc  absl_graphcycles_internal.pc  absl_hash.pc  absl_hash_container_defaults.pc  absl_hashtable_debug_hooks.pc  absl_hashtablez_sampler.pc  absl_inlined_vector_internal.pc  absl_kernel_timeout_internal.pc  absl_log_globals.pc  absl_log_internal_log_impl.pc  absl_log_internal_structured.pc  absl_log_severity.pc  absl_memory.pc  absl_meta.pc  absl_node_slot_policy.pc  absl_optional.pc  absl_prefetch.pc  absl_random_distributions.pc  absl_random_internal_fast_uniform_bits.pc  (+13 more)
ortools/linux/lib/: libortools_flatzinc.so.9.11.4210
ortools/macos/lib/: libortools_flatzinc.9.11.dylib
ortools/share/pkgconfig/: zlib.pc
(+349 files in other folders)
